--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,12 @@
+*.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
+/.idea/caches/build_file_checksums.ser
 /.idea/libraries
+/.idea/modules.xml
+/.idea/workspace.xml
+/.idea/*
 .DS_Store
 /build
-
-*.iml
+/captures
+.externalNativeBuild
